bzip2ida/g0/compress
/data/output_dir/patch/bzip2/ida/gcc/O0/bzip2-gcc-O0/compress/src/bzip2.c:1821:22: error: use of undeclared identifier 'unk_41A38F'
v3 = ( const char *)&unk_41A38F; 
                     ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/gcc/O0/bzip2-gcc-O0/compress/src/obj/bzip2.o] Error 1
